--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <activity android:name=".EditScheduleActivity" />
         <activity android:name=".GroupActivity" />
         <activity android:name=".GroupDetailActivity" />
-        <activity android:name=".Fragment.PostFragment$ChatAdapter"></activity>
+        <activity android:name=".Fragment.PostFragment$ChatAdapter">
+        </activity>
     </application>
 
 </manifest>
